--- a/Src/HuntingAppSupport.csproj
+++ b/Src/HuntingAppSupport.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.4.3" />
+  </ItemGroup>
+
 </Project>
