--- a/Src/HuntingAppSupport.csproj
+++ b/Src/HuntingAppSupport.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.4.3" />
+    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
